--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,17 @@ a:visited {
   color: #fff;
 }
 
-/* If you have any custom headings or special text rules, remove hard-coded blacks */
 h1, h2, h3, h4, h5, h6 {
   color: inherit;
+}
+
+/* Intro */
+.intro {
+  text-align: center;
+  margin: 2rem 0;
+}
+.intro h2 {
+  margin-bottom: 1rem;
 }
 
 /* Reset & Base */
@@ -81,7 +89,7 @@ a {
   /* solid card-background color */
   background: #46523b;
   text-align: center;
-  color: #333333;
+  color: #fff;
   padding: 6rem 1rem;
   overflow: hidden;
 }
@@ -361,4 +369,30 @@ a {
 
 body {
     background: #46523b;
+}
+
+/* Featured Projects */
+.featured-projects {
+  margin: 2rem 0;
+}
+.featured-projects .cards .card img {
+  width: 50%; 
+  height: auto; 
+  display: block;
+  margin: 0 auto;
+  object-fit: cover;
+}
+
+.featured-projects .card {
+  background: #46523b;
+  border: none;
+  border-bottom: none;
+}
+
+.featured-projects h2 {
+  text-align: center;
+}
+
+.featured-projects .cards .card h3 {
+  padding: 0.5rem 1rem;
 }
