--- a/css/styles.css
+++ b/css/styles.css
@@ -105,14 +105,14 @@ a {
   max-width: 600px;
   margin: 0 auto;          /* center block */
   padding: 0 1rem;
+  font-size: 150%;
 }
 
 .btn {
   display: inline-block;
   margin-top: 1rem;
   padding: 0.5rem 1rem;
-  background: #007BFF;
-  color: #fff;
+  background: #22271d;
   border-radius: 5px;
 }
 /* Cards */
@@ -165,7 +165,7 @@ a {
     width: 90%;
     top: 45%;
     padding: 0 1rem;
-    font-size: 75%;
+    font-size: 100%;
   }
   .hero-text h1,
   .hero-text p {
@@ -360,6 +360,7 @@ a {
   align-self: flex-start;
   padding: 0.75rem 1.5rem;
   background: #007BFF;
+  background: #22271d;
   color: #fff;
   border: none;
   border-radius: 4px;
